--- a/app/src/main/res/drawable/button_green.xml
+++ b/app/src/main/res/drawable/button_green.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+    <gradient
+        android:angle="90"
+        android:startColor="#FF0BB60B"
+        android:endColor="#0ede0e"
+        android:type="linear"
+        />
+    <stroke
+        android:width="1dp"
+        android:color="#FF0BB60B"
+        />
 </shape>
