--- a/app/src/main/res/drawable/button_logout.xml
+++ b/app/src/main/res/drawable/button_logout.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+    <gradient
+        android:angle="90"
+        android:startColor="#FFD90036"
+        android:endColor="#a10028"
+        android:type="linear"
+        />
+    <stroke
+        android:width="1dp"
+        android:color="#FFD90036"
+        />
 </shape>
