--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+    <gradient
+        android:angle="90"
+        android:startColor="#0a74af"
+        android:endColor="#0FA9FF"
+        android:type="linear"
+        />
+    <stroke
+        android:width="1dp"
+        android:color="#0a74af"
+        />
+</shape>
