--- a/app/src/main/res/drawable/header_gradient.xml
+++ b/app/src/main/res/drawable/header_gradient.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item>
+        <shape>
+            <gradient
+                android:angle="90"
+                android:startColor="#a8cf34"
+                android:endColor="#89a92b"
+                android:type="linear"
+                />
+        </shape>
+    </item>
 </selector>
