--- a/app/src/main/res/layout/activity_register3.xml
+++ b/app/src/main/res/layout/activity_register3.xml
@@ -1,10 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.imcom.bikerama.Register3Activity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-</RelativeLayout>
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_bg">
+
+            <!--  Header  Starts-->
+            <LinearLayout
+                android:id="@+id/header"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/header_gradient"
+                android:paddingTop="5dip"
+                android:paddingBottom="5dip">
+                <!-- Logo Start-->
+                <ImageView android:src="@drawable/bikerama_ldpi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dip"/>
+                <!-- Logo Ends -->
+            </LinearLayout>
+            <!--  Header Ends -->
+
+            <!-- Footer Start -->
+            <LinearLayout
+                android:id="@+id/footer"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="203dip"
+                android:background="@drawable/footer_repeat"
+                android:layout_alignParentBottom="true">
+            </LinearLayout>
+            <!-- Footer Ends -->
+
+            <!-- Registration Form -->
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dip"
+                android:layout_below="@id/header">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/conte_mais"
+                    android:textSize="20dp" />
+
+                <!-- Estado Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Label -->
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dip"
+                        android:text="@string/action_uf_register"
+                        />
+
+                    <Spinner
+                        android:id="@+id/spinnerEstado"
+                        android:layout_width="fill_parent"
+                        android:layout_marginTop="5dip"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:layout_marginBottom="10dip"
+                        android:background="#ffffff"
+                        android:prompt="@string/spinner_estado" />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Cidade Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Label -->
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dip"
+                        android:text="@string/action_cidade_register"
+                        />
+
+                    <Spinner
+                        android:id="@+id/spinnerCidade"
+                        android:layout_width="fill_parent"
+                        android:layout_marginTop="5dip"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:layout_marginBottom="10dip"
+                        android:background="#ffffff"
+                        android:prompt="@string/spinner_cidade" />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Spinner Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Input Idade -->
+                    <TableLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:paddingTop="10dp">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.5">
+
+                            <!-- Label -->
+                            <TextView
+                                android:layout_width="fill_parent"
+                                android:text="@string/action_idade_register"
+                                android:layout_marginRight="10dp"
+                                />
+
+                            <!-- Input Idade -->
+                            <Spinner
+                                android:id="@+id/spinnerIdade"
+                                android:layout_width="fill_parent"
+                                android:layout_marginTop="5dip"
+                                android:layout_marginRight="15dp"
+                                android:layout_height="70px"
+                                android:gravity="center"
+                                android:layout_marginBottom="10dip"
+                                android:background="#ffffff"
+                                android:prompt="@string/action_idade_register" />
+
+                            <!-- Label -->
+                            <TextView
+                                android:layout_width="fill_parent"
+                                android:text="@string/action_sexo_register"
+                                />
+
+                            <!-- Input Sexo -->
+                            <Spinner
+                                android:id="@+id/spinnerSexo"
+                                android:layout_width="fill_parent"
+                                android:layout_marginTop="5dip"
+                                android:layout_marginLeft="15dp"
+                                android:layout_height="70px"
+                                android:gravity="center"
+                                android:layout_marginBottom="10dip"
+                                android:background="#ffffff"
+                                android:prompt="@string/action_sexo_register" />
+
+                        </TableRow>
+                    </TableLayout>
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- CEP Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Label -->
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dip"
+                        android:text="@string/action_cep_register"
+                        />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- CEP -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/inputCep"
+                        android:layout_width="fill_parent"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:layout_marginBottom="10dip"
+                        android:background="#ffffff"
+                        android:singleLine="true"
+                        android:maxLength="8"
+                        android:layout_below="@+id/inputCep"
+                        />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Register Button -->
+                <Button android:id="@+id/btnSubmit"
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="16dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:background="@drawable/button_shape"
+                    android:text="@string/action_salvar"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+            <!-- Registration Form Ends -->
+        </RelativeLayout>
+    </ScrollView>
+
+</LinearLayout>
