--- a/app/src/main/res/layout/activity_register_bike.xml
+++ b/app/src/main/res/layout/activity_register_bike.xml
@@ -1,10 +1,238 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.imcom.bikerama.RegisterBikeActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-</RelativeLayout>
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_bg">
+
+            <!--  Header  Starts-->
+            <LinearLayout
+                android:id="@+id/header"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/header_gradient"
+                android:paddingTop="5dip"
+                android:paddingBottom="5dip">
+                <!-- Logo Start-->
+                <ImageView android:src="@drawable/bikerama_ldpi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dip"/>
+                <!-- Logo Ends -->
+            </LinearLayout>
+            <!--  Header Ends -->
+
+            <!-- Footer Start -->
+            <LinearLayout
+                android:id="@+id/footer"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="203dip"
+                android:background="@drawable/footer_repeat"
+                android:layout_alignParentBottom="true">
+            </LinearLayout>
+            <!-- Footer Ends -->
+
+            <!-- Registration Form -->
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dip"
+                android:layout_below="@id/header">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:text="@string/cadastro_bike"
+                    android:textSize="20dp" />
+
+                <!-- Nome Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/inputNome"
+                        android:layout_width="fill_parent"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:background="#ffffff"
+                        android:singleLine="true"
+                        android:maxLength="50"
+                        android:layout_below="@+id/inputNome"
+                        />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Tipo Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Label
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dip"
+                        android:text="@string/action_tipo_bike"
+                        /> -->
+
+                    <Spinner
+                        android:id="@+id/spinnerTipo"
+                        android:layout_width="fill_parent"
+                        android:layout_marginTop="10dip"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:background="#ffffff"
+                        android:prompt="@string/action_tipo_bike" />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Perfil Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Label
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dip"
+                        android:text="@string/action_perfil_bike"
+                        /> -->
+
+                    <Spinner
+                        android:id="@+id/spinnerPerfil"
+                        android:layout_width="fill_parent"
+                        android:layout_marginTop="10dip"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:background="#ffffff"
+                        android:prompt="@string/action_perfil_bike" />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Fabricante Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/inputFabricante"
+                        android:layout_width="fill_parent"
+                        android:layout_marginTop="10dip"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:background="#ffffff"
+                        android:singleLine="true"
+                        android:maxLength="50"
+                        android:layout_below="@+id/inputFabricante"
+                        />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Modelo Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/inputModelo"
+                        android:layout_width="fill_parent"
+                        android:layout_height="70px"
+                        android:layout_marginTop="10dip"
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:background="#ffffff"
+                        android:singleLine="true"
+                        android:maxLength="50"
+                        android:layout_below="@+id/inputModelo"
+                        />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- N Serie Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/inputNserie"
+                        android:layout_width="fill_parent"
+                        android:layout_height="70px"
+                        android:layout_marginTop="10dip"
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:background="#ffffff"
+                        android:singleLine="true"
+                        android:maxLength="50"
+                        android:layout_below="@+id/inputNserie"
+                        />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Cor Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/inputCor"
+                        android:layout_width="fill_parent"
+                        android:layout_height="70px"
+                        android:layout_marginTop="10dip"
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:background="#ffffff"
+                        android:singleLine="true"
+                        android:maxLength="50"
+                        android:layout_below="@+id/inputCor"
+                        />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Data Compra Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/inputDtCompra"
+                        android:layout_width="fill_parent"
+                        android:layout_height="70px"
+                        android:layout_marginTop="10dip"
+                        android:gravity="center"
+                        android:inputType="date"
+                        android:background="#ffffff"
+                        android:singleLine="true"
+                        android:maxLength="10"
+                        android:layout_below="@+id/inputDtCompra"
+                        />
+                </android.support.design.widget.TextInputLayout>
+
+
+                <!-- Register Button -->
+                <Button android:id="@+id/btnSubmit"
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dip"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:background="@drawable/button_shape"
+                    android:text="@string/action_salvar"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+            <!-- Registration Form Ends -->
+        </RelativeLayout>
+    </ScrollView>
+
+</LinearLayout>
