--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,6 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_bg">
+
+            <!--  Header Starts-->
+            <LinearLayout
+                android:id="@+id/header"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/header_gradient"
+                android:paddingTop="5dip"
+                android:paddingBottom="5dip">
+                <!-- Logo Start-->
+                <ImageView android:src="@drawable/bikerama_mdpi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dip"/>
+                <!-- Logo Ends -->
+            </LinearLayout>
+            <!--  Header Ends -->
+
+            <!-- Footer Start -->
+            <LinearLayout
+                android:id="@+id/footer"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="203dip"
+                android:background="@drawable/footer_repeat"
+                android:layout_alignParentBottom="true">
+            </LinearLayout>
+            <!-- Footer Ends -->
+
+            <!-- Login Form -->
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dip"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/header">
+
+                <!--  Email Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/email"
+                        android:layout_width="fill_parent"
+                        android:layout_marginTop="5dip"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:inputType="textEmailAddress"
+                        android:hint="@string/login_email"
+                        android:layout_marginBottom="20dip"
+                        android:background="#ffffff"
+                        android:singleLine="true"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <!--  Password Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="fill_parent"
+                        android:layout_marginTop="5dip"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:inputType="textPassword"
+                        android:hint="@string/login_password"
+                        android:imeActionId="@+id/login"
+                        android:imeOptions="actionUnspecified"
+                        android:layout_marginBottom="20dip"
+                        android:background="#ffffff"
+                        android:singleLine="true"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Login button -->
+                <Button android:id="@+id/btnLogin" style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="16dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:background="@drawable/button_shape"
+                    android:text="@string/action_sign_in_short"
+                    android:textStyle="bold" />
+
+                <!-- Link to Registration Screen -->
+                <TextView android:id="@+id/link_to_register"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dip"
+                    android:layout_marginBottom="40dip"
+                    android:text="@string/login_cadastro"
+                    android:gravity="center"
+                    android:textSize="20dip"
+                    android:textColor="#0b84aa"/>
+
+            </LinearLayout>
+            <!-- Login Form Ends -->
+
+        </RelativeLayout>
+    </ScrollView>
 
 </LinearLayout>
