--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -3,4 +3,189 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_bg">
+
+            <!--  Header  Starts-->
+            <LinearLayout
+                android:id="@+id/header"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/header_gradient"
+                android:paddingTop="5dip"
+                android:paddingBottom="5dip">
+                <!-- Logo Start-->
+                <ImageView android:src="@drawable/bikerama_mdpi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dip"/>
+                <!-- Logo Ends -->
+            </LinearLayout>
+            <!--  Header Ends -->
+
+            <!-- Footer Start -->
+            <LinearLayout
+                android:id="@+id/footer"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="203dip"
+                android:background="@drawable/footer_repeat"
+                android:layout_alignParentBottom="true">
+            </LinearLayout>
+            <!-- Footer Ends -->
+
+            <!-- Registration Form -->
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dip"
+                android:layout_below="@id/header">
+
+                <!-- Full Name Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/inputName"
+                        android:layout_width="fill_parent"
+                        android:layout_marginTop="5dip"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:hint="@string/action_name_register"
+                        android:layout_marginBottom="10dip"
+                        android:background="#ffffff"
+                        android:singleLine="true"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <!--  Email Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/inputEmail"
+                        android:layout_width="fill_parent"
+                        android:layout_marginTop="5dip"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:inputType="textEmailAddress"
+                        android:hint="@string/action_email_register"
+                        android:layout_marginBottom="10dip"
+                        android:background="#ffffff"
+                        android:singleLine="true"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Password Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/inputSenha"
+                        android:layout_width="fill_parent"
+                        android:layout_marginTop="5dip"
+                        android:layout_height="70px"
+                        android:gravity="center"
+                        android:inputType="textPassword"
+                        android:hint="@string/action_senha_register"
+                        android:layout_marginBottom="10dip"
+                        android:background="#ffffff"
+                        android:singleLine="true"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Password Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <!-- Input Idade -->
+                    <TableLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:paddingTop="10dp">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.5">
+
+                            <!-- Input Idade -->
+                            <Spinner
+                                android:id="@+id/inputIdade"
+                                android:layout_width="match_parent"
+                                android:layout_height="70px"
+                                android:prompt="@string/spinner_prompt"
+                                android:gravity="center"
+                                android:layout_marginRight="40dp"
+                                android:maxLines="1"
+                                android:background="#ffffff"/>
+
+                            <!-- <EditText android:id="@+id/inputIdade"
+                                android:layout_width="match_parent"
+                                android:layout_height="50px"
+                                android:gravity="center"
+                                android:layout_marginRight="40dp"
+                                android:hint="@string/action_idade_register"
+                                android:inputType="textAutoComplete"
+                                android:maxLines="1"
+                                android:background="#ffffff"
+                                android:singleLine="true" /> -->
+
+                            <!-- Input Genero -->
+                            <EditText android:id="@+id/inputGenero"
+                                android:layout_width="match_parent"
+                                android:layout_height="50px"
+                                android:gravity="center"
+                                android:paddingLeft="20dp"
+                                android:hint="@string/action_sexo_register"
+                                android:imeActionId="@+id/login"
+                                android:imeOptions="actionUnspecified"
+                                android:inputType="textAutoComplete"
+                                android:maxLines="1"
+                                android:background="#ffffff"
+                                android:singleLine="true" />
+
+                        </TableRow>
+                    </TableLayout>
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Register Button -->
+                <Button android:id="@+id/btnRegister" style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="16dp"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16sp"
+                    android:background="@drawable/button_shape"
+                    android:text="@string/action_register"
+                    android:textStyle="bold" />
+
+                <!-- Link to Login Screen -->
+                <TextView android:id="@+id/link_to_login"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dip"
+                    android:layout_marginBottom="40dip"
+                    android:text="@string/action_sign_in"
+                    android:gravity="center"
+                    android:textSize="20dip"
+                    android:textColor="#025f7c"/>
+
+            </LinearLayout>
+            <!-- Registration Form Ends -->
+        </RelativeLayout>
+    </ScrollView>
+
 </LinearLayout>
