--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="black_overlay">#66000000</color>
+    <color name="textos_login">#d90036</color>
+    <color name="btn_logut_bg">#FFD90036</color>
+    <color name="name_verde">#a8cf34</color>
+    <color name="white">#FFFFFF</color>
 </resources>
