Percurso + SQLite + MySQL v 1.0.9

--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -55,7 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/bike_minha_bike"
-                    android:layout_marginTop="54dp"
+                    android:layout_marginTop="34dp"
                     android:textSize="15dp" />
 
                 <TextView
@@ -82,10 +82,10 @@
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/bike_minhas_bikes"
                     android:textAllCaps="true"
                     android:textStyle="bold" />
@@ -94,10 +94,10 @@
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/bike_minha_bike_componentes"
                     android:textAllCaps="true"
                     android:textStyle="bold" />
@@ -106,10 +106,10 @@
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/bike_minha_bike_acessorios"
                     android:textAllCaps="true"
                     android:textStyle="bold" />
@@ -118,10 +118,10 @@
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/bike_minha_bike_historico"
                     android:textAllCaps="true"
                     android:textStyle="bold" />
@@ -130,10 +130,10 @@
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/bike_minha_bike_relatorios"
                     android:textAllCaps="true"
                     android:textStyle="bold" />
@@ -142,10 +142,10 @@
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/bike_minha_bike_tutoriais"
                     android:textAllCaps="true"
                     android:textStyle="bold" />
@@ -155,7 +155,7 @@
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginTop="16dip"
+                    android:layout_marginTop="5dip"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:background="@drawable/button_logout"
