--- a/app/src/main/res/drawable/button_green.xml
+++ b/app/src/main/res/drawable/button_green.xml
@@ -3,7 +3,7 @@
     <gradient
         android:angle="90"
         android:startColor="#FF0BB60B"
-        android:endColor="#0ede0e"
+        android:endColor="#0EDE0E"
         android:type="linear"
         />
     <stroke
