--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
                     android:layout_marginTop="16dp"
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/action_continue_registro"
                     android:textAllCaps="true"
                     android:textStyle="bold" />
