--- a/app/src/main/res/layout/activity_register3.xml
+++ b/app/src/main/res/layout/activity_register3.xml
@@ -204,7 +204,7 @@
                     android:layout_marginTop="16dp"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/action_salvar"
                     android:textStyle="bold" />
 
