--- a/app/src/main/res/layout/activity_register_bike.xml
+++ b/app/src/main/res/layout/activity_register_bike.xml
@@ -225,7 +225,7 @@
                     android:layout_marginTop="10dip"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/action_salvar"
                     android:textStyle="bold" />
 
