--- a/app/src/main/res/layout/activity_register_componentes.xml
+++ b/app/src/main/res/layout/activity_register_componentes.xml
@@ -633,7 +633,7 @@
                     android:layout_marginTop="10dp"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/action_salvar"
                     android:textStyle="bold" />
 
