--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -98,7 +98,7 @@
                     android:layout_marginTop="16dp"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/action_sign_in_short"
                     android:textStyle="bold" />
 
