--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -168,7 +168,7 @@
                     android:layout_marginTop="16dp"
                     android:textColor="#FFFFFF"
                     android:textSize="16sp"
-                    android:background="@drawable/button_shape"
+                    android:background="@drawable/button_blue"
                     android:text="@string/action_register"
                     android:textStyle="bold" />
 
